Create Reference Data Endpoints (#10)
* Add tb result lookup

* Update tb status seed data

* Add allocation booking method endpoint

* Add allocation skipped method endpoint

* Refactor routers

* Add finishing unit endpoint
